hydroflow_plus/src/rewrites/snapshots/hydroflow_plus__rewrites__persist_pullup__tests__persist_pullup_through_map-2.snap
---
source: hydroflow_plus/src/rewrites/persist_pullup.rs
expression: optimized.ir()
---
[
    ForEach {
        f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , () > ({ use crate :: __staged :: rewrites :: persist_pullup :: tests :: * ; | n | println ! ("{}" , n) }),
        input: Map {
            f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , i32 > ({ use crate :: __staged :: rewrites :: persist_pullup :: tests :: * ; | v | v + 1 }),
            input: Source {
                source: Iter(
                    { use crate :: __staged :: rewrites :: persist_pullup :: tests :: * ; 0 .. 10 },
                ),
                location_kind: Process(
                    0,
                ),
            },
        },
    },
]
